# Waka

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  copilot.md  docker-compose.yml  kali.md  my_test1.md  pyproject.toml
.postman/: resources.yaml
api/v1/: urls.py
apps/accounts/: admin.py  managers.py  models.py  services.py  validators.py
apps/accounts/api/v1/: serializers.py  urls.py  (+1 more)
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: factories.py  test_api.py  test_models.py  test_services.py
apps/agents/: admin.py  apps.py  models.py  selectors.py  services.py  signals.py
apps/agents/migrations/: 0001_initial.py
apps/agents/tests/: factories.py  test_api.py  test_models.py  test_selectors.py  test_services.py  test_signals_or_wiring.py
apps/geo/: models.py  selectors.py  services.py  utils.py
apps/geo/tests/: test_models.py  test_selectors.py  test_services.py
apps/networks/: admin.py  apps.py  models.py
apps/networks/migrations/: 0001_initial.py  0002_seed_networks.py
apps/networks/tests/: test_api.py  test_models.py
common/: constants.py  exceptions.py  mixins.py  models.py  pagination.py  permissions.py  utils.py  validators.py
common/tests/: test_exceptions.py  test_pagination.py  test_permissions.py
config/settings/: base.py  development.py  production.py  staging.py  testing.py
deploy/docker/: Dockerfile
docs/: architecture.md
postman/environments/: New Environment.environment.yaml
requirements/: base.txt  development.txt  production.txt  testing.txt
tests/: test_settings.py
(+6 files in other folders)
