[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.venv
    | venv
    | .eggs
    | .git
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["**/migrations/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.format]
preview = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests", "common/tests", "apps/accounts/tests", "apps/networks/tests"]

[tool.django]
settings = "config.settings.development"
